--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 		<meta name=twitter:site content=@yanorei32>
 		<meta name=twitter:creator content=@yanorei32>
 		<meta http-equiv=X-UA-Compatible content="IE=edge">
-		<link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&text=ふぃじっくすぼ～ん一時「二度と来るこがないのではか」等噂されてたVRChat夏。20年3月、つに我々†を迎え出続き思為書記途絶…" rel=stylesheet>
+		<link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&text=ふぃじっくすぼ～ん一時「二度と来るこがないのではか」等噂されてたVRChat夏。20年3月、つに我々†を迎え出続き思為手記途絶…" rel=stylesheet>
 		<link href="https://fonts.googleapis.com/css?family=Oxygen" rel=stylesheet>
 	</head>
 	<body>
 		<div class=container>
 			<center><h1>ふぃじっくすぼ～ん</h1></center>
 			<p>一時「二度と来ることがないのではないか」等と噂されていたVRChatの夏。2022年3月、ついに我々は†夏†を迎えることが出来た。</p>
-			<p>続きが思いつかなかった為、書記はここで途絶えている…。</p>
+			<p>続きが思いつかなかった為、手記はここで途絶えている…。</p>
 			<p style="text-align: right">
 				<a href=https://github.com/yr32infra/physicsb.one/pulls>
 					[EDIT]
