--- a/index.html
+++ b/index.html
@@ -21,15 +21,11 @@
 			<p>一時「二度と来ることがないのではないか」等と噂されていたVRChatの夏。2022年3月、ついに我々は†夏†を迎えることが出来た。</p>
 			<p>続きが思いつかなかった為、手記はここで途絶えている…。</p>
 			<p style="text-align: right">
-				<a href=https://github.com/yr32infra/physicsb.one/pulls>
-					[EDIT]
-				</a>
+				<a href=https://github.com/yr32infra/physicsb.one/pulls>[EDIT]</a>
 			</p>
 			<hr>
 			<center>
-				<a href=https://physicsb.one>
-					physicsb.one
-				</a>
+				<a href=https://physicsb.one>physicsb.one</a>
 			</center>
 		</div>
 		<style>
