--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta property=og:type content=website>
 		<meta property=og:title content=ふぃじっくすぼ～ん>
 		<meta property=og:description content=なつがきた…2022年03月の事である…>
-		<meta property=og:site_name content=めたばーす！>
+		<meta property=og:site_name content=ふぃじっくすぼ～ん>
 		<meta name=twitter:card content=summary_large_image>
 		<meta name=twitter:site content=@yanorei32>
 		<meta name=twitter:creator content=@yanorei32>
