--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 	<body>
 		<div class=container>
 			<center><h1>ふぃじっくすぼ～ん</h1></center>
-			<p>一時「二度と来ることがないのではないか」等と噂されていたVRChatの夏。2022年3月、ついに我々は†夏†を迎えることが出来た。</p>
-			<p>続きが思いつかなかった為、手記はここで途絶えている…。</p>
+			<div class=content>
+				<p>一時「二度と来ることがないのではないか」等と噂されていたVRChatの夏。2022年3月、ついに我々は†夏†を迎えることが出来た。</p>
+				<p>続きが思いつかなかった為、手記はここで途絶えている…。</p>
+			</div>
 			<p style="text-align: right">
 				<a href=https://github.com/yr32infra/physicsb.one/pulls>[EDIT]</a>
 			</p>
@@ -45,7 +47,7 @@
 				color: #333;
 				overflow-y: hidden;
 			}
-			p:before {
+			.content p:before {
 				content: "　";
 			}
 			.container {
@@ -54,7 +56,7 @@
 				overflow-y: hidden;
 				padding: 0px 16px;
 				margin: 16px auto;
-				background-color: #eed;
+				background-image: url(./paper.svg);
 				width: calc(100% - 64px);
 				height: calc(100vh - 32px);
 			}
