--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta name=twitter:site content=@yanorei32>
 		<meta name=twitter:creator content=@yanorei32>
 		<meta http-equiv=X-UA-Compatible content="IE=edge">
+		<link rel=icon type=image/png href=favicon.png>
 		<link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&text=ふぃじっくすぼ～ん一時「二度と来るこがないのではか」等噂されてたVRChat夏。20年3月、つに我々†を迎え出続き思為手記途絶…" rel=stylesheet>
 		<link href="https://fonts.googleapis.com/css?family=Oxygen" rel=stylesheet>
 	</head>
