--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 			<hr>
 			<center>
 				<a href=https://physicsb.one>physicsb.one</a>
+				/
+				<a href=https://kuso.domains>kuso.domains</a>
 			</center>
 		</div>
 		<style>
@@ -48,6 +50,9 @@
 				color: #333;
 				overflow-y: hidden;
 			}
+			h1 {
+				margin: 0;
+			}
 			.content p:before {
 				content: "　";
 			}
@@ -55,11 +60,10 @@
 				border-radius: 24px;
 				max-width: 800px;
 				overflow-y: hidden;
-				padding: 0px 16px;
+				padding: 32px 16px;
 				margin: 16px auto;
 				background-image: url(./paper.svg);
 				width: calc(100% - 64px);
-				height: calc(100vh - 32px);
 			}
 		</style>
 	</body>
