--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 				max-width: 800px;
 				overflow-y: hidden;
 				padding: 32px 16px;
-				margin: 16px auto;
+				padding-bottom: 16px;
+				margin: 64px auto;
 				background-image: url(./paper.svg);
 				width: calc(100% - 64px);
 			}
